# supercapacitors

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSES-bundled.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: test_on_push.yml
docs/: conf.py  index.md
examples/: supercapacitor.ipynb
src/supercapacitors/: __init__.py  entry_point.py
src/supercapacitors/models/input/: VerbruggeLiu.py
src/supercapacitors/parameters/input/: Iamrod2024.py  Verbrugge2005.py
tests/generated_project_tests/: test_entry_points.py
tests/user_tests/: test_package.py
