[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "supercapacitors"
authors = [
  { name = "Ferran Brosa Planella", email = "Ferran.Brosa-Planella@warwick.ac.uk" },
]
description = "A supercapacitors modelling project using PyBaMM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = ["pybamm",]

[project.optional-dependencies]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
  "nox[uv]",
  "pre-commit",
]
docs = [
  "sphinx",
  "pydata_sphinx_theme",
  "sphinx_design",
  "sphinx-copybutton",
  "myst-parser",
  "sphinx-inline-tabs",
  "sphinxcontrib-bibtex",
  "sphinx-autobuild",
  "sphinx-last-updated-by-git",
  "nbsphinx",
  "ipython",
  "sphinx-gallery",
]

[project.urls]
Homepage = "https://github.com/mmsg-warwick/supercapacitors"
"Bug Tracker" = "https://github.com/mmsg-warwick/supercapacitors/issues"
Discussions = "https://github.com/mmsg-warwick/supercapacitors/discussions"
Changelog = "https://github.com/mmsg-warwick/supercapacitors/releases"

[project.entry-points."parameter_sets"]
Chen2020 = "supercapacitors.parameters.input.Chen2020:get_parameter_values"
Verbrugge2005 = "supercapacitors.parameters.input.Verbrugge2005:get_parameter_values"
Iamrod2024 = "supercapacitors.parameters.input.Iamrod2024:get_parameter_values"

[project.entry-points."models"]
SPM = "supercapacitors.models.input.SPM:SPM"
BasicReservoir = "supercapacitors.models.input.BasicReservoir:BasicReservoir"
VerbruggeLiu = "supercapacitors.models.input.VerbruggeLiu:VerbruggeLiu"

[tool.hatch]
envs.default.dependencies = [
  "pybamm",
]
[tool.hatch.version]
path = "src/supercapacitors/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/supercapacitors"]


[tool.coverage]
run.source = ["supercapacitors"]
port.exclude_lines = [
  'pragma: no cover',
]

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  #"ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  #"RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
src = ["src"]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
ignore = [
  "E741",        # Ambiguous variable name
  "E501",        # Line too long
  "PLR2004",     # Magic value used in comparison
]
line-length = 100
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
